Add TypedValue and enhance null handling for statement generation